[metadata]
name = psat-result-api
version = 1.0.3
author = Régis Tremblay Lefrançois
author_email = regg00@gmail.com
description = Python module to interact with the Proofpoint Security Awareness Training (PSAT) Results API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/regg00/psat-result-api
project_urls =
    Bug Tracker = https://github.com/regg00/psat-result-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src